[gd_scene load_steps=8 format=3]

[ext_resource type="Script" path="res://src/client/arena/arena_root.gd" id="1_script"]
[ext_resource type="PackedScene" path="res://src/client/arena/arena_client.tscn" id="5_arena_client"]
[ext_resource type="PackedScene" path="res://src/client/arena/battle_interface/battle_interface.tscn" id="6_battle"]
[ext_resource type="PackedScene" path="res://src/client/arena/overlays/online_join_overlay/online_join_overlay.tscn" id="7_join"]
[ext_resource type="PackedScene" path="res://src/client/arena/overlays/online_pause_overlay/online_pause_overlay.tscn" id="8_pause"]
[ext_resource type="PackedScene" path="res://src/client/arena/overlays/online_match_result_overlay/online_match_result_overlay.tscn" id="9_match"]
[ext_resource type="PackedScene" path="res://src/client/arena/overlays/online_death_overlay/online_death_overlay.tscn" id="10_death"]

[node name="ArenaRoot" type="Node"]
script = ExtResource("1_script")

[node name="LevelContainer" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="ArenaClient" parent="." instance=ExtResource("5_arena_client")]

[node name="ArenaHudLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true

[node name="BattleInterface" parent="ArenaHudLayer" instance=ExtResource("6_battle")]
unique_name_in_owner = true
visible = false

[node name="OnlineJoinOverlay" parent="ArenaHudLayer" instance=ExtResource("7_join")]
unique_name_in_owner = true
visible = false

[node name="OnlinePauseOverlay" parent="ArenaHudLayer" instance=ExtResource("8_pause")]
unique_name_in_owner = true
visible = false

[node name="OnlineMatchResultOverlay" parent="ArenaHudLayer" instance=ExtResource("9_match")]
unique_name_in_owner = true
visible = false

[node name="OnlineDeathOverlay" parent="ArenaHudLayer" instance=ExtResource("10_death")]
unique_name_in_owner = true
visible = false
